@@ -241,7 +241,7 @@ public class Configuration {
     if (valueString == null)
       return defaultValue;
     try {
-      return Class.forName(valueString);
+      return classLoader.loadClass(valueString);
     } catch (ClassNotFoundException e) {
       throw new RuntimeException(e);
     }
